@@ -1,8 +1,9 @@
 20/8/11 started 7.27.0
 - version bump for new dev cycle
 - im_subtract(), im_avg(), im_min(), im_minpos(), im_copy(), im_embed(),
-  im_flophor(), im_flipver(), im_insert(), im_insert_noexpand() redone as 
-  classes
+  im_flophor(), im_flipver(), im_insert(), im_insert_noexpand(), im_lrjoin(),
+  im_tbjoin()
+  redone as classes
 - added VIPS_ARGUMENT_APPEND to help control arg ordering
 - generate has a 'stop' param to signal successful early termination
 - added optional output args, eg. x/y for min
